change margin, fix spacing, resize img

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -38,6 +38,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 100px;
+    margin-right: -1100px;
 }
 
 .text {
@@ -71,4 +72,9 @@ body {
     display: flex;
     flex-direction: column;
     gap: 100px;
+}
+
+.logo {
+    font-size: 12px;
+    color: #F9FAF8;
 }
